apps/gitea/env/k3s-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
    spec:
      serviceAccountName: gitea
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: gitea
          image: bitnami/gitea:1.22.1
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: gitea-data
              mountPath: /bitnami/gitea
            - name: empty-dir
              mountPath: /opt/bitnami/gitea
              subPath: app-base-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-pvc
